Stage 4, feat: Implement message-based chat functionality in blockchain
Updated blockchain to include messages in mined blocks.
- Messages are collected during block mining and added to the new block once mining is complete.
- Implemented thread synchronization for message intake and block mining.
- Each block stores only messages received during its mining phase.
- Added logic to clear pending messages after inclusion in a block.